Switch to uber-shader
Motivation: we can render everything in one draw call. With proper layering because of vertex order.

--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -21,3 +21,5 @@ wgpu = "0.8"
 [dev-dependencies]
 winit = { version = "0.25", default-features = false, features = [ "x11" ] }
 pollster = "0.2"
+simple_logger = "1"
+log = "0.4"
