Update sprite example to use many sprites

--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -19,6 +19,7 @@ ttf-parser = "0.12"
 wgpu = "0.8"
 
 [dev-dependencies]
+fastrand = "1"
 winit = { version = "0.25", default-features = false, features = [ "x11" ] }
 pollster = "0.2"
 simple_logger = "1"
