--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -14,6 +14,7 @@ glam = { version = "0.16", features = [ "bytemuck" ] }
 guillotiere = "0.6"
 image = { version = "0.23", default-features = false, features = [ "png", "jpeg" ] }
 logos = "0.12"
+lru = "0.6"
 lyon = "0.17"
 palette = "0.5"
 slotmap = "1"
