--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -13,24 +13,28 @@ anyhow = "1"
 bytemuck = { version = "1", features = [ "derive" ] }
 fontdb = "0.5"
 fontdue = "0.4"
-glam = { version = "0.16", features = [ "bytemuck" ] }
+glam = { version = "0.17", features = [ "bytemuck" ] }
 guillotiere = "0.6"
 image = { version = "0.23", default-features = false, features = [ "png", "jpeg" ] }
 log = "0.4"
 logos = "0.12"
 lru = "0.6"
 lyon = "0.17"
+once_cell = "1"
 palette = "0.5"
 pollster = "0.2"
 simple_logger = "1"
 slotmap = "1"
 raw-window-handle = "0.3"
-rustybuzz = "0.3"
+rustybuzz = "0.4"
 thiserror = "1"
 ttf-parser = "0.12"
 unicode-bidi = "0.3"
 wgpu = "0.9"
+winit = { version = "0.25", default-features = false, features = [ "x11" ] }
 
 [dev-dependencies]
 fastrand = "1"
-winit = { version = "0.25", default-features = false, features = [ "x11" ] }
+
+[profile.dev]
+opt-level = 3
