--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["caelunshun <caelunshun@gmail.com>"]
 edition = "2018"
 
 [lib]
-crate-type = ["rlib", "staticlib"]
+crate-type = ["rlib", "cdylib"]
 
 [dependencies]
 ahash = "0.7"
