--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -3,6 +3,7 @@ name = "dume-renderer"
 version = "0.1.0"
 authors = ["caelunshun <caelunshun@gmail.com>"]
 edition = "2018"
+resolver = "2"
 
 [lib]
 crate-type = ["rlib", "cdylib"]
@@ -30,7 +31,7 @@ rustybuzz = "0.4"
 thiserror = "1"
 ttf-parser = "0.12"
 unicode-bidi = "0.3"
-wgpu = "0.9"
+wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "6ba30cbc0bbce498d24d959315d3b4310efdcc06" }
 winit = { version = "0.25", default-features = false, features = [ "x11" ] }
 
 [dev-dependencies]
