--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "dume-renderer"
+name = "dume"
 version = "0.1.0"
 authors = ["caelunshun <caelunshun@gmail.com>"]
 edition = "2018"
 resolver = "2"
-
-[lib]
-crate-type = ["rlib", "cdylib"]
 
 [dependencies]
 ahash = "0.7"
@@ -16,7 +13,7 @@ fontdb = "0.5"
 fontdue = "0.4"
 glam = { version = "0.17", features = [ "bytemuck" ] }
 guillotiere = "0.6"
-image = { version = "0.23", default-features = false, features = [ "png", "jpeg" ] }
+image = { version = "0.23", default-features = false }
 log = "0.4"
 logos = "0.12"
 lru = "0.6"
@@ -24,18 +21,21 @@ lyon = "0.17"
 once_cell = "1"
 palette = "0.5"
 pollster = "0.2"
-simple_logger = "1"
 slotmap = "1"
-raw-window-handle = "0.3"
 rustybuzz = "0.4"
 thiserror = "1"
 ttf-parser = "0.12"
 unicode-bidi = "0.3"
 wgpu = "0.10"
-winit = { version = "0.25", default-features = false, features = [ "x11" ] }
 
 [dev-dependencies]
 fastrand = "1"
+winit = { version = "0.25", default-features = false, features = [ "x11" ] }
+
+[features]
+default = ["png", "jpeg"]
+png = ["image/png"]
+jpeg = ["image/jpeg"]
 
 [profile.dev]
 opt-level = 3
