Start rewriting text layout
Switched from rustybuzz/fontdue to swash, as it supports subpixel text positioning
and font hinting.

The new layout system determines runs to pass to the shaper based on text
BiDi levels and script runs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ wgpu = "0.10"
 
 [dev-dependencies]
 fastrand = "1"
+pollster = "0.2"
 winit = { version = "0.25", default-features = false, features = [ "x11" ] }
 
 [profile.dev]
