--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,7 @@
 name = "dume"
 version = "0.1.0"
 authors = ["caelunshun <caelunshun@gmail.com>"]
-edition = "2018"
-resolver = "2"
+edition = "2021"
 
 [dependencies]
 ahash = "0.7"
@@ -13,7 +12,7 @@ flume = "0.10"
 glam = { version = "0.17", features = [ "bytemuck" ] }
 guillotiere = "0.6"
 log = "0.4"
-lru = "0.6"
+lru = "0.7"
 lyon = "0.17"
 once_cell = "1"
 palette = "0.6"
@@ -26,11 +25,12 @@ smartstring = { version = "0.2", features = [ "serde" ] }
 swash = "0.1"
 thiserror = "1"
 unicode-bidi = "0.3"
-wgpu = "0.10"
+wgpu = "0.11"
 
 [dev-dependencies]
-fastrand = "1"
+image = { version = "0.23", default-features = false, features = [ "jpeg" ] }
 pollster = "0.2"
+simple_logger = "1"
 winit = { version = "0.25", default-features = false, features = [ "x11" ] }
 
 [profile.dev]
