Encapsulate initialization code in dume-winit crate, now with WebAssembly support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,37 +1,9 @@
-[package]
-name = "dume"
-version = "0.1.0"
-authors = ["caelunshun <caelunshun@gmail.com>"]
-edition = "2021"
-
-[dependencies]
-ahash = "0.7"
-anyhow = "1"
-bytemuck = { version = "1", features = [ "derive" ] }
-flume = "0.10"
-glam = { version = "0.17", features = [ "bytemuck" ] }
-guillotiere = "0.6"
-log = "0.4"
-lru = "0.7"
-lyon = "0.17"
-once_cell = "1"
-palette = "0.6"
-parking_lot = "0.11"
-rectangle-pack = "0.4"
-serde = { version = "1", features = [ "derive" ] }
-slotmap = "1"
-smallvec = "1"
-smartstring = { version = "0.2", features = [ "serde" ] }
-swash = "0.1"
-thiserror = "1"
-unicode-bidi = "0.3"
-wgpu = "0.11"
-
-[dev-dependencies]
-image = { version = "0.23", default-features = false, features = [ "jpeg" ] }
-pollster = "0.2"
-simple_logger = "1"
-winit = { version = "0.25", default-features = false, features = [ "x11" ] }
+[workspace]
+members = [
+    "crates/dume",
+    "crates/dume-winit"
+]
+resolver = "2"
 
 [profile.dev]
 opt-level = 3
