Reimplement the markup format, but this time as a compile-time proc macro.
Adds back a text markup format for easily expressing rich text sections.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
     "crates/dume",
-    "crates/dume-winit"
+    "crates/dume-winit",
+    "crates/dume-markup",
 ]
 resolver = "2"
 
