--- a/crates/dume/Cargo.toml
+++ b/crates/dume/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 ahash = "0.7"
 anyhow = "1"
 bytemuck = { version = "1", features = [ "derive" ] }
-flume = "0.10"
+dume-markup = { path = "../dume-markup" }
 glam = { version = "0.17", features = [ "bytemuck" ] }
 guillotiere = "0.6"
 image = { version = "0.23", default-features = false, optional = true }
