--- a/crates/dume/Cargo.toml
+++ b/crates/dume/Cargo.toml
@@ -9,6 +9,7 @@ ahash = "0.7"
 anyhow = "1"
 bytemuck = { version = "1", features = [ "derive" ] }
 dume-markup = { path = "../dume-markup" }
+fast_image_resize = "0.4"
 glam = { version = "0.17", features = [ "bytemuck" ] }
 guillotiere = "0.6"
 image = { version = "0.23", default-features = false, optional = true }
