--- a/crates/dume-winit/Cargo.toml
+++ b/crates/dume-winit/Cargo.toml
@@ -8,7 +8,7 @@ dume = { path = "../dume" }
 glam = "0.17"
 instant = "0.1"
 wgpu = { version = "0.12", features = ["webgl"] }
-winit = { version = "0.26", default-features = false, features = ["web-sys"] }
+winit = { version = "0.26", default-features = false }
 
 [features]
 default = ["x11"]
