--- a/crates/dume-winit/Cargo.toml
+++ b/crates/dume-winit/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 dume = { path = "../dume" }
-glam = "0.17"
+glam = "0.20"
 instant = "0.1"
 wgpu = { version = "0.12", features = ["webgl"] }
 winit = { version = "0.26", default-features = false }
@@ -25,7 +25,7 @@ web-sys = "0.3"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 log = "0.4"
-noise = "0.7"
+noise = { version = "0.7", default-features = false }
 palette = "0.6"
 rand = "0.8"
-simple_logger = "1"
+simple_logger = "2"
