--- a/crates/zylo-tiny-skia/Cargo.toml
+++ b/crates/zylo-tiny-skia/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+slotmap = "1"
 tiny-skia = { version = "0.8", default-features = false, features = [ "std", "simd" ] }
 zylo = { path = "../zylo" }
