--- a/crates/zylo/Cargo.toml
+++ b/crates/zylo/Cargo.toml
@@ -13,6 +13,7 @@ rustybuzz = { version = "0.5", optional = true }         # text shaping
 swash = { version = "0.1", optional = true }             # glyph outlining
 owned_ttf_parser = { version = "0.15", optional = true } # font parsing
 zeno = { version = "0.2", optional = true }              # glyph rasterization
+slotmap = "1"
 
 [features]
 default = ["text"]
